# cloudposterior

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
cloudposterior/: __init__.py  api.py  cache.py  config.py  dashboard.py  display.py  naming.py  notify.py  progress.py  serialize.py  wordhash.py
cloudposterior/backends/: __init__.py  modal_backend.py
cloudposterior/remote/: worker.py
examples/: basics.ipynb  caching.ipynb  eight_schools.py  monitoring.ipynb  notifications.ipynb  radon.ipynb
notebooks/: eight_schools.ipynb
tests/: conftest.py  test_cache.py  test_caching_local.py  test_lru_prune.py  test_modal_e2e.py  test_naming.py  test_notify.py  test_notify_validation.py  test_progress.py  test_resize_warning.py  test_serialize.py  test_worker_local.py  test_wrap.py
