[project]
name = "cloudposterior"
version = "0.1.0"
description = "Run PyMC MCMC sampling on cloud VMs with one line of code. Caching, live progress, and phone notifications included."
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "cloudpickle>=3.0",
    "coolname>=4.0",
    "ipywidgets>=8.0",
    "lz4>=4.0",
    "modal>=1.0",
    "msgpack>=1.0",
    "qrcode>=7.0",
    "requests>=2.28",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pymc>=5.0",
    "arviz>=0.17,<1.0",
    "pytest>=8.0",
    "ipykernel>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pymc>=5.0",
    "arviz>=0.17,<1.0",
    "pytest>=8.0",
    "ipykernel>=6.0",
]
