[project]
name = "cloudposterior"
version = "0.4.0"
description = "Run PyMC MCMC sampling on cloud VMs with one line of code. Caching, live progress, and phone notifications included."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Spencer Boucher" },
]
keywords = ["pymc", "mcmc", "bayesian", "cloud", "modal", "sampling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "cloudpickle>=3.0",
    "coolname>=4.0",
    "ipywidgets>=8.0",
    "lz4>=4.0",
    "modal>=1.0",
    "msgpack>=1.0",
    "qrcode>=7.0",
    "requests>=2.28",
    "rich>=13.0",
    "fastapi>=0.100",
]

[project.urls]
Homepage = "https://github.com/justmytwospence/cloudposterior"
Repository = "https://github.com/justmytwospence/cloudposterior"
Issues = "https://github.com/justmytwospence/cloudposterior/issues"

[project.optional-dependencies]
dev = [
    "pymc>=5.0",
    "arviz>=0.17,<1.0",
    "pytest>=8.0",
    "ipykernel>=6.0",
    "pandas>=2.0",
    "graphviz>=0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
markers = [
    "modal: tests that hit Modal and incur cloud costs (skipped unless --run-modal)",
]

[dependency-groups]
dev = [
    "pymc>=5.0",
    "arviz>=0.17,<1.0",
    "pytest>=8.0",
    "ipykernel>=6.0",
    "pandas>=2.0",
    "graphviz>=0.20",
]
